# openfang

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEX_IMPLEMENTATION_SPEC.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  OPENFANG_MEGA_DOC_TR.md  PULSIVO_SALESMAN_MEGA_DOC_TR.md  README.md  docker-compose.yml  pulsivo-salesman.toml.example
.github/workflows/: ci.yml  live-smoke.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/tutor/: agent.toml
agents/writer/: agent.toml
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: lib.rs  (+9 more)
crates/openfang-channels/: Cargo.toml
crates/openfang-memory/: Cargo.toml
crates/pulsivo-salesman/: Cargo.toml
crates/pulsivo-salesman-api/: Cargo.toml  build.rs
crates/pulsivo-salesman-api/src/: codex_oauth.rs  lib.rs  middleware.rs  rate_limiter.rs  routes.rs  sales.rs  server.rs  webchat.rs
crates/pulsivo-salesman-api/src/sales/: discovery.rs  engine.rs  enrichment.rs  http.rs  llm.rs  onboarding.rs  shared.rs  strategy.rs  tests.rs
crates/pulsivo-salesman-api/static/: index_head.html
crates/pulsivo-salesman-api/static/css/: components.css  layout.css  theme.css
crates/pulsivo-salesman-api/static/html/: body_open.html  sales_command.html  sales_leads.html  sales_market_b2c.html  sales_onboarding.html  sales_ops.html  sales_profiles_b2b.html  sales_profiles_b2c.html  sales_profiles_shared.html  sales_runs.html
crates/pulsivo-salesman-api/ui/: bunfig.toml  package.json
crates/pulsivo-salesman-api/ui/src/: webchat-entry.js
crates/pulsivo-salesman-api/ui/src/core/: api.js  app-shell.js
crates/pulsivo-salesman-api/ui/src/pages/sales/: approvals.js  b2c.js  data.js  index.js  jobs.js  oauth.js  ops.js  prospects.js  state.js
crates/pulsivo-salesman-kernel/: Cargo.toml
crates/pulsivo-salesman-kernel/src/: config.rs  config_reload.rs  error.rs  kernel.rs  lib.rs  registry.rs  supervisor.rs
crates/pulsivo-salesman-memory/: Cargo.toml
crates/pulsivo-salesman-runtime/: Cargo.toml
crates/pulsivo-salesman-runtime/src/: lib.rs  llm_driver.rs  model_catalog.rs  web_fetch.rs  web_search.rs
crates/pulsivo-salesman-runtime/src/drivers/: anthropic.rs  codex.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/pulsivo-salesman-types/: Cargo.toml
crates/pulsivo-salesman/src/: main.rs
deploy/: openfang-entrypoint.sh  pulsivo-salesman-entrypoint.sh  pulsivo-salesman.service
docs/: README.md  api-reference.md  architecture.md  getting-started.md
graphify-out/: AST_REPORT.md  GRAPH_REPORT.md  ast.json  cost.json  graph.html  graph.json  manifest.json
scripts/: compose-fresh.sh  install.ps1  install.sh  sales_live_pipeline.sh
scripts/docker/: install-smoke.Dockerfile
sdk/javascript/: index.d.ts  index.js  package.json
sdk/python/: pulsivo_salesman_client.py  pulsivo_salesman_sdk.py  setup.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+94 files in other folders)
