[package]
name = "pulsivo-salesman-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sales-only daemon kernel for Pulsivo Salesman"

[dependencies]
pulsivo-salesman-types = { path = "../pulsivo-salesman-types" }
pulsivo-salesman-memory = { path = "../pulsivo-salesman-memory" }
pulsivo-salesman-runtime = { path = "../pulsivo-salesman-runtime" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
