[package]
name = "pulsivo-salesman"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI launcher for the Pulsivo Salesman sales daemon"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pulsivo-salesman-api = { path = "../pulsivo-salesman-api" }
pulsivo-salesman-kernel = { path = "../pulsivo-salesman-kernel" }
pulsivo-salesman-types = { path = "../pulsivo-salesman-types" }
